macros/tests/ui/fail_missing_from.stderr
error: Invalid SurrealQL: Invalid query: Unexpected token `WHERE`, expected FROM
 --> [1:10]
  |
1 | SELECT * WHERE age > 18
  |          ^^^^^

 --> tests/ui/fail_missing_from.rs:5:23
  |
5 |     let _ = surql_check!("SELECT * WHERE age > 18");
  |                          ^^^^^^^^^^^^^^^^^^^^^^^^^
